// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex> - basic settings 1`] = `
<div
  className="flex"
  style={
    Object {
      "WebkitBoxSizing": "border-box",
      "WebkitFlexDirection": "column",
      "backgroundColor": "#ff0000",
      "boxSizing": "border-box",
      "flexDirection": "column",
      "margin": 8,
      "padding": 8,
    }
  }
>
  Title
</div>
`;

exports[`<Flex> - className should be passed correctly 1`] = `
<div
  className="inline-flex test"
  style={
    Object {
      "WebkitBoxSizing": "border-box",
      "WebkitFlexDirection": "row",
      "boxSizing": "border-box",
      "flexDirection": "row",
    }
  }
/>
`;
